More spring in winter (#2)
* refactoring

* more cleanup, refactoring

* refactoring

* refactoring

* refactoring